# carpenter-core

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
carpenter/: __init__.py  __main__.py  chat_tool_loader.py  chat_tool_registry.py  config.py  constants.py  coordinator.py  db.py  db_migrations.py  prompts.py  schema.sql  server.py  thread_pools.py  tool_loader.py
carpenter_tools/: __init__.py  _callback.py  _declarations_validate.py  declarations.py  tool_meta.py
config_seed/: credential-registry.yaml  model-registry.yaml
docs/: coding-guidelines.md  design.md  model-selection-guide.md  retry-and-health.md  review-outcomes-reference.md  security-model.md  template-rigidity.md  tool-confirmation.md  trust-invariants.md  verified-flow-analysis.md
tests/: conftest.py  test_ad_hoc_review.py  test_arc_read_grants.py  test_arc_self_escalation.py  test_carpenter_tools.py  test_chat_tool_files_restriction.py  test_chat_tool_loader.py  test_chat_tool_registry.py  test_config.py  test_dark_factory.py  test_data_models.py  test_db.py  test_execution_metadata.py  test_execution_sessions.py  test_integration_child_failure.py  test_integration_coding_change.py  test_integration_state_encryption.py  test_integration_trust.py  test_messaging_and_context.py  test_model_selection.py  test_platform_injection.py  test_platform_restart.py  test_plugin_async.py  test_prompts.py  test_read_arc_result.py  test_sandbox_provider.py  test_setup_credential.py  test_startup_recovery.py  test_taint_invariants.py  test_template_capabilities.py  test_thread_pools.py  test_tool_confirmation.py  test_tool_confirmation_integration.py  test_tool_handler_registry.py  (+2 more)
(+484 files in other folders)
